<resources>
    <string name="app_name">Samplehavit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">HOME</string>
    <string name="menu_information">INFORMATION</string>
    <string name="menu_basket">SHOPPING BASKET</string>
    <string name="havit_title">HAVIT</string>
    <string name="item1_bts">Black T-shirts</string>
    <string name="item1_color">Black</string>
    <string name="item_box">IN THE BOX</string>
    <string name="color">COLOR</string>
    <string name="item1_box">1 HAVIT T-shirts</string>
    <string name="button_add_cart">ADD CART</string>
    <string name="button_buy">BUY</string>
    <string name="item3_cap">BLACK BALL CAP</string>
    <string name="item3_color">BLACK</string>
    <string name="item3_box">1 HAVIT Ball Cap</string>
    <string name="t1">HAVIT T1</string>
    <string name="t1_color">Various Color Available</string>
    <string name="t1_box">1 HAVIT T1 Disposable Device</string>
    <string name="t2">HAVIT T2</string>
    <string name="t2_color">Various Color Available</string>
    <string name="t2_box">1 HAVIT T2 Disposable Device</string>
    <string name="item4_mug">WHITE LOGO MUG</string>
    <string name="item4_color">WHITE</string>
    <string name="item4_box">1 HAVIT MUG</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="logOut">Log Out</string>
    <string name="item2_wts">White CT T-shirts</string>
    <string name="item2_color">WHITE</string>
    <string name="item2_box">1 HAVIT T-shirts</string>
    <string name="delete">DELETE</string>
    <string name="more">MORE→</string>
    <string name="guest">GUEST</string>
    <string name="id">ID</string>
    <string name="password">PASSWORD</string>
    <string name="passCheck">PASSWORD CHECK</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="tab_device">Device</string>
    <string name="tab_pods">Pods</string>
    <string name="tab_accessories">Accessories</string>
    <string name="tab_support">Support</string>
    <string name="settingtitle">SETTING</string>
    <string name="language">Language</string>
    <string name="korean">Korean</string>
    <string name="english">English</string>
    <string name="cancle">CANCLE</string>
    <string name="ok">OK</string>
    <string name="suncheon">Suncheon</string>
    <string name="busan">Busan</string>
    <string name="seoul">Seoul</string>
    <string name="suncheon_address">11, Palma 3-gil, Suncheon-si, Jeollanam-do, Republic of Korea</string>
    <string name="suncheon_num">0507-1437-5707</string>
    <string name="busan_address">28, Centum 1-ro, Haeundae-gu, Busan, Republic of Korea</string>
    <string name="busan_num">051-000-0000</string>
    <string name="seoul_address">165, Apgujeong-ro, Gangnam-gu, Seoul, Republic of Korea</string>
    <string name="seoul_num">02-547-2233</string>
    <string name="signUp_msg">Your account is set up.</string>
    <string name="signUp_msg_continue">Do you want to proceed?</string>
    <string name="button_back">Double tap to go back Home</string>
    <string name="dark_mode">Dark Mode</string>
</resources>