<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/menu1"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu2"
            android:icon="@drawable/ic_baseline_perm_identity_24"
            android:title="@string/menu_information" />
        <item
            android:id="@+id/menu3"
            android:icon="@drawable/ic_baseline_shopping_basket_24"
            android:title="@string/menu_basket" />
    </group>
    <item android:title=""
        android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/login"
                android:title="LOGIN"/>
            <item
                android:id="@+id/singup"
                android:title="SIGN UP"/>
        </menu>
    </item>

</menu>
